--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,7 +1,17 @@
-
+@import "./reset";
 @import "./base";
+@import "./header";
+@import "./pet";
+@import "./carousel-1";
+@import "./main-form";
+@import "./pracing";
 @import "./layout";
-@import "./components";
+@import "./subscription";
+@import "./footer";
+@import "./shop";
+@import "./shop-card";
+
+
 
 
 
